--- a/sellandbuy/package.json
+++ b/sellandbuy/package.json
@@ -57,5 +57,9 @@
     "uniqid": "^5.4.0",
     "uuid": "^9.0.1",
     "xendit-node": "^3.6.0"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express-flash": "^0.0.2"
   }
 }
