--- a/sellandbuy/.env.example
+++ b/sellandbuy/.env.example
@@ -1,8 +1,9 @@
 PORT=3000
-MONGO_URL=mongodb://localhost:27017/sellandbuy
-SESSION_SECRET=your_session_secret
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_email_password
+SESSION_SECRET=your-session-secret
+EMAIL_USER=your-email@example.com
+EMAIL_PASS=your-email-password
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+ADMIN_EMAIL=admin@gmail.com
+ADMIN_PASSWORD=test123
